<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ntnu.noront.fragments.NoteEditFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/note_edit_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_title_label"
        />
    <EditText
        android:id="@+id/note_edit_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_edit_title_label"
        android:inputType="textMultiLine"
        android:minLines="1"
        />
    <TextView
        android:id="@+id/note_edit_note_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_edit_title_field"
        android:text="@string/note_edit_note_label"
        />
    <EditText
        android:id="@+id/note_edit_note_field"
        android:layout_width="match_parent"
        android:layout_below="@+id/note_edit_note_label"
        android:layout_height="300dp"
        android:inputType="textMultiLine"
        android:minLines="3"
        />
    <ImageButton
        android:id="@+id/note_edit_image"
        android:layout_width="match_parent"
        android:layout_below="@+id/note_edit_note_field"
        android:layout_height="wrap_content"
        android:text="@string/note_edit_image_button"
        android:contentDescription="@string/note_edit_image"
        />
    <ImageButton
        android:id="@+id/note_edit_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_edit_image"
        android:contentDescription="@string/note_edit_sound"
        />
    <ImageButton
        android:id="@+id/note_edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_edit_sound"
        android:contentDescription="@string/note_edit_location"
        />
    <Button
        android:id="@+id/note_edit_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/note_edit_location"
        android:layout_marginBottom="-10dp"
        android:text="@string/note_edit_save_button"
        />
    <Button
        android:id="@+id/note_edit_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_edit_save_button"
        android:text="@string/note_edit_cancel_button"
        />


</RelativeLayout>
