<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ntnu.noront.fragments.NoteViewFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/note_view_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/note_view_title_label"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/note_view_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_view_title_label"
        android:layout_marginBottom="30dp"
        />
    <TextView
        android:id="@+id/note_view_note_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/note_view_note_field"
        android:layout_marginTop="10dp"
        android:text="@string/note_view_note_label"
        android:textStyle="italic"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/note_view_note_field"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@+id/note_view_title_field"
        />
    <ImageButton
        android:id="@+id/note_view_photo_imagebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_view_note_field"
        android:contentDescription="@string/note_view_photo_imagebutton"
        />
    <ImageButton
        android:id="@+id/note_view_sound_imagebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_view_photo_imagebutton"
        android:contentDescription="@string/note_view_sound_imagebutton"
        />
    <ImageButton
        android:id="@+id/note_view_location_imagebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_view_sound_imagebutton"
        android:contentDescription="@string/note_view_location_imagebutton"
        />
    <Button
        android:id="@+id/note_view_editnote_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/note_view_location_imagebutton"
        android:text="@string/note_view_editnote_button"/>

</RelativeLayout>
